force-app/main/default/objects/leaseworks__Address__c/leaseworks__Address__c.object-meta.xml
<CustomObject>
    <label>Z_Unused_NotDeletable_2106 Address Book</label>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_NotDeletable_2106 Address Book</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>