force-app/main/default/objects/leaseworks__Address__c/fields/leaseworks__Address_Book_External_ID__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Address_Book_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Address Book ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>