force-app/main/default/objects/leaseworks__Address__c/fields/leaseworks__Email_Address__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Email_Address__c</fullName>
    <label>Email Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>