force-app/main/default/objects/leaseworks__Address__c/fields/leaseworks__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_Name__c</fullName>
    <description>Asana: Hovering Over Contact Object, shows only First name and Operator</description>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>