force-app/main/default/objects/leaseworks__Address__c/fields/leaseworks__Lessor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lessor this contact is associated with.</inlineHelpText>
    <label>Lessor</label>
    <referenceTo>leaseworks__Counterparty__c</referenceTo>
    <relationshipLabel>Z_Unused Address Book Contacts</relationshipLabel>
    <relationshipName>Address_Book</relationshipName>
    <type>Lookup</type>
</CustomField>