force-app/main/default/objects/leaseworks__Address__c/fields/leaseworks__Office_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Office_Number__c</fullName>
    <label>Office Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>