force-app/main/default/objects/leaseworks__Address__c/validationRules/leaseworks__Both_First_Last_Names_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Both_First_Last_Names_cannot_be_blank</fullName>
    <active>true</active>
    <description>Last Name cannot be blank.</description>
    <errorConditionFormula>AND(ISBLANK(leaseworks__Last_Name__c), !ISBLANK(priorvalue(leaseworks__Last_Name__c)))</errorConditionFormula>
    <errorDisplayField>leaseworks__Last_Name__c</errorDisplayField>
    <errorMessage>Last Name cannot be blank.</errorMessage>
</ValidationRule>