force-app/main/default/objects/leaseworks__Address__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Title__c</columns>
    <columns>leaseworks__Company__c</columns>
    <columns>leaseworks__Cell_Number__c</columns>
    <columns>leaseworks__Email_Address__c</columns>
    <columns>leaseworks__Office_Number__c</columns>
    <columns>leaseworks__Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>